# swemu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
emulator/: CMakeLists.txt
emulator/src/: main.cpp
mkcert/: cert.go
patcher/: CMakeLists.txt
patcher/src/: library.cpp
src/: main.cpp
